# Binance-VN

./: .gitignore  Cargo.toml  Dockerfile  README.md
.sqlx/: query-098f62de4030a2539df7502a402a32aa0b3176dc9bc584b9fcba3c987844ed73.json  query-2e18721e56db59e2c8283cac4bb3ed54abd8ffe08094ec15368bcf367d725965.json  query-59847ee07bb90c550873e517631ce184620919efc84abf8df81c468fe1e794ca.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-d184daf02e3fb098dfc3446d6575869094f8d984f1310333841f1d29e64e20ad.json  query-e6d8226c0ff3c6f89047d1e2042890418cfa64406d237cd63cc7000328fef150.json
src/: main.rs
src/api/: mod.rs  routes.rs  state.rs
src/api/user/: controller.rs  dto.rs  mod.rs  model.rs  routes.rs  service.rs  test.rs
src/config/: database.rs  settings.rs
src/macros/: log.rs
src/utils/: auth.rs  error.rs  generic_repository.rs  mod.rs  pagination.rs  status.rs  valid_req.rs
