[package]
name = "binance"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
async-graphql = "7.0.6"
async-graphql-actix-web = "7.0.6"
dotenv = "0.15"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "migrate"] }